[package]
name = "webhook-airtable-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
log = "0.4.19"
flowsnet-platform-sdk = "0.1.5"
webhook-flows = "0.4"
serde_json = "1"